# system_monitor

./: .gitignore  CMakeLists.txt  README.md  appServ.py  broadcast.py  broadcast_server.py  getORBtrack.py  iot_client.py  log.txt  monitor.py  monitor.py~  navGuide.py  odom2map.py  odom_combined.py  orb_track.py  package.xml  remoteServ.py  remote_server.py  status_audio_reporter.py  system_logger_node.py  time_tasks.py
cfg/: system_monitor.cfg
msg/: Status.msg
preinstall/: install_dep.sh
script/: init.sh
src/: galileo_status_relay.cpp
src/system_monitor/: broadcast_server.py  iot_client.py  monitor.py  orb_track.py  remote_server.py  status_audio_creater.py  status_audio_reporter.py  system_logger_node.py  time_tasks.py
src/system_monitor/utils/: config-template.py  config.py  galileo_status_service.py  linkkit.py  map_service.py  monitor_server.py  nav_task.py  navigation_service.py  req_parser.py  scale_orb.py  schedule_nav_task.py  schedule_service.py  udp_status_service.py
utils/: config.py  galileo_status_service.py  map_service.py  monitor_server.py  monitor_servers.py  nav_task.py  navigation_service.py  req_parser.py  scale_orb.py  udp_status_service.py  utils.py
